# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20210321120549_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
