[package]
name = "zero2prod"
version = "0.1.0"
authors = ["zZKato <michelevig@protonmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"
reqwest = "0.11.0"
serde = {version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
tokio = "1.2.0"
