[package]
name = "zero2prod"
version = "0.1.0"
authors = ["zZKato <michelevig@protonmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
config = { version = "0.12", default-features = false, features = ["yaml"] }

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
tokio = "1.2.0"
reqwest = { version = "0.11.0", features = ["json"] }
