[package]
name = "zero2prod"
version = "0.1.0"
authors = ["zZKato <michelevig@protonmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
config = { version = "0.12", default-features = false, features = ["yaml"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "=0.5.1"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]

[dev-dependencies]
tokio = "1.17.0"
reqwest = { version = "0.11.10", features = ["json"] }
once_cell = "1"
